<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.classroomscanner.fragments.HomeFragment"
        android:label="@string/label_home">
        <action
            android:id="@+id/action_home_to_scan_hub"
            app:destination="@id/scan_hub_fragment" />
        <action
            android:id="@+id/action_home_to_search"
            app:destination="@id/search_fragment" />
        <action
            android:id="@+id/action_home_to_saved"
            app:destination="@id/saved_fragment" />
        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/settings_fragment" />
        <action
            android:id="@+id/action_home_to_history"
            app:destination="@id/history_fragment" />
    </fragment>

    <fragment
        android:id="@+id/scan_hub_fragment"
        android:name="com.classroomscanner.fragments.ScanHubFragment"
        android:label="@string/label_scan_hub">
        <action
            android:id="@+id/action_scan_hub_to_settings"
            app:destination="@id/settings_fragment" />
        <action
            android:id="@+id/action_scan_hub_to_history"
            app:destination="@id/history_fragment" />
    </fragment>

    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.classroomscanner.fragments.SettingsFragment"
        android:label="@string/label_settings">
        <argument
            android:name="mode"
            app:argType="com.classroomscanner.core.ScanMode" />
        <action
            android:id="@+id/action_settings_to_camera"
            app:destination="@id/camera_fragment" />
        <action
            android:id="@+id/action_settings_to_permissions"
            app:destination="@id/permissions_fragment" />
    </fragment>

    <fragment
        android:id="@+id/permissions_fragment"
        android:name="com.classroomscanner.fragments.PermissionsFragment"
        android:label="@string/label_permission">
        <argument
            android:name="mode"
            app:argType="com.classroomscanner.core.ScanMode" />
        <action
            android:id="@+id/action_permissions_to_camera"
            app:destination="@id/camera_fragment"
            app:popUpTo="@id/permissions_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/camera_fragment"
        android:name="com.classroomscanner.fragments.CameraFragment"
        android:label="@string/label_scanner">
        <argument
            android:name="mode"
            app:argType="com.classroomscanner.core.ScanMode" />
    </fragment>

    <fragment
        android:id="@+id/history_fragment"
        android:name="com.classroomscanner.fragments.HistoryFragment"
        android:label="@string/label_history" />

    <fragment
        android:id="@+id/saved_fragment"
        android:name="com.classroomscanner.fragments.SavedFragment"
        android:label="@string/label_saved">
        <action
            android:id="@+id/action_saved_to_person"
            app:destination="@id/person_fragment" />
        <action
            android:id="@+id/action_saved_to_add_person"
            app:destination="@id/add_person_fragment" />
        <action
            android:id="@+id/action_saved_to_item"
            app:destination="@id/item_fragment" />
        <action
            android:id="@+id/action_saved_to_add_item"
            app:destination="@id/add_item_fragment" />
    </fragment>

    <fragment
        android:id="@+id/person_fragment"
        android:name="com.classroomscanner.fragments.PersonFragment"
        android:label="@string/label_person">
        <argument
            android:name="personId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/add_person_fragment"
        android:name="com.classroomscanner.fragments.AddPersonFragment"
        android:label="@string/label_add_person">
        <action
            android:id="@+id/action_add_person_to_enroll"
            app:destination="@id/enroll_fragment" />
    </fragment>

    <fragment
        android:id="@+id/enroll_fragment"
        android:name="com.classroomscanner.fragments.EnrollFragment"
        android:label="@string/label_enroll">
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="front"
            app:argType="boolean" />
    </fragment>

    <fragment
        android:id="@+id/item_fragment"
        android:name="com.classroomscanner.fragments.ItemFragment"
        android:label="@string/label_item">
        <argument
            android:name="itemId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/add_item_fragment"
        android:name="com.classroomscanner.fragments.AddItemFragment"
        android:label="@string/label_add_item">
        <argument
            android:name="kind"
            app:argType="string" />
        <action
            android:id="@+id/action_add_item_to_item_enroll"
            app:destination="@id/item_enroll_fragment" />
    </fragment>

    <fragment
        android:id="@+id/item_enroll_fragment"
        android:name="com.classroomscanner.fragments.ItemEnrollFragment"
        android:label="@string/label_item_scan">
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="kind"
            app:argType="string" />
        <argument
            android:name="front"
            app:argType="boolean" />
    </fragment>

    <fragment
        android:id="@+id/search_fragment"
        android:name="com.classroomscanner.fragments.SearchFragment"
        android:label="@string/label_search">
        <argument
            android:name="query"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_search_to_search_camera"
            app:destination="@id/search_camera_fragment" />
    </fragment>

    <fragment
        android:id="@+id/search_camera_fragment"
        android:name="com.classroomscanner.fragments.SearchCameraFragment"
        android:label="@string/label_searching">
        <argument
            android:name="targetKind"
            app:argType="string" />
        <argument
            android:name="targetId"
            app:argType="long" />
        <argument
            android:name="targetName"
            app:argType="string" />
        <argument
            android:name="targetLabel"
            app:argType="string" />
        <argument
            android:name="front"
            app:argType="boolean" />
    </fragment>
</navigation>
